@@ -6,6 +6,7 @@ Changes in 1.4.9-stable:
  o Clear the timer cache when leaving the event loop; reported by Robin Haberkorn
  o Fix a typo in setting the global event base; reported by lance.
  o Fix a memory leak when reading multi-line headers
+ o Fix a memory leak by not running explicit close detection for server connections
 
 Changes in 1.4.8-stable:
  o Match the query in DNS replies to the query in the request; from Vsevolod Stakhov.
